# HolocronToolset

./: .gitignore  README.md  build_backend.py  pyproject.toml
src/: resources_rc.py  sitecustomize.py
src/plugin/spyder_holocron_toolset/spyder/: plugin.py
src/resources/: resources_rc.py
src/toolset/: __main__.py  main_app.py  main_init.py  main_settings.py
src/toolset/blender/: commands.py  detection.py  integration.py  ipc_client.py  serializers.py
src/toolset/config/: config_info.py  config_update.py  config_version.py
src/toolset/data/: indoormap.py  installation.py  me_controls.py  misc.py  settings.py
src/toolset/gui/common/: base_2d_controls.py  base_2d_renderer.py  debugger.py  editor_pipelines.py  extraction_feedback.py  filters.py  indoor_builder_ops.py  language_server_client.py  log_bridge.py  lyt_ops.py  palette_helpers.py  snapping.py  viewport_2d_nav.py  walkmesh_materials.py
src/toolset/gui/common/interaction/: camera.py  transforms.py
src/toolset/gui/common/style/: delegates.py  theme_manager.py  vscode_style.py
src/toolset/gui/common/widgets/: code_editor.py  combobox.py  command_palette.py  debug_callstack_widget.py  debug_variables_widget.py  find_replace_widget.py  progressbar.py  syntax_highlighter.py  test_config_widget.py  tree.py
src/toolset/gui/dialogs/: about.py  async_loader.py  asyncloader.py  blender_choice.py  clone_module.py  editor_help.py  github_selector.py  insert_instance.py  inventory.py  load_from_location_result.py  lyt_dialogs.py  reference_search_options.py  resource_comparison.py  search.py  select_module.py  select_update.py  settings.py  theme_selector.py  tslpatchdata_editor.py  update_dialog.py  update_github.py
src/toolset/gui/dialogs/edit/: dialog_animation.py  dialog_model.py  locstring.py
src/toolset/gui/dialogs/instance/: _util.py  placeable.py  trigger.py
src/toolset/gui/dialogs/save/: generic_file_saver.py  to_bif.py  to_module.py  to_rim.py
src/toolset/gui/editor/: __init__.py  base.py  editor.py  file.py  media.py
src/toolset/gui/editors/: __main__.py  are.py  bwm.py  editor_wiki_mapping.py  erf.py  fac.py  gff.py  ifo.py  jrl.py  ltr.py  mdl.py  nss.py  pth.py  savegame.py  ssf.py  standalone.py  tlk.py  tpc.py  twoda.py  txt.py  utc.py  utd.py  ute.py  uti.py  utm.py  utp.py  uts.py  utt.py  utw.py  wav.py
src/toolset/gui/editors/dlg/: constants.py  editor.py  list_widget_base.py  list_widget_item.py  list_widget_items.py  model.py  node_editor.py  node_types.py  search_manager.py  state_manager.py  test2.py  tree_view.py  widget_windows.py
src/toolset/gui/editors/git/: controls.py  git.py  mode.py  undo.py
src/toolset/gui/editors/lip/: batch_processor.py  lip_editor.py
src/toolset/gui/helpers/: callback.py
src/toolset/gui/widgets/: installation_toolbar.py  kotor_filesystem_model.py  long_spinbox.py  main_widgets.py  media_player_widget.py  preview_panel.py  set_bind.py  splash_screen.py  terminal_widget.py  test.py  texture_loader.py  texture_preview.py
src/toolset/gui/widgets/edit/: color.py  combobox_2da.py  locstring.py  spinbox.py
src/toolset/gui/widgets/renderer/: base.py  lyt_editor.py  lyt_renderer.py  model.py  module.py  texture_browser.py  view_compass.py  viewfinder_gizmo.py  walkmesh.py  walkmesh_editor.py
src/toolset/gui/widgets/settings/: installations.py
src/toolset/gui/windows/: autorigger.py  designer_controls.py  help.py  help_paths.py  help_updater.py  help_window.py  kotordiff.py  main.py  module_designer.py  update_check_thread.py  update_manager.py
src/toolset/gui/windows/indoor_builder/: builder.py  constants.py  kit_downloader.py  renderer.py  undo_commands.py
src/toolset/help/wiki/: Bioware-Aurora-Conversation.md  Bioware-Aurora-Core-Formats.md  Bioware-Aurora-Creature.md  Bioware-Aurora-Items-Economy-and-Narrative.md  Bioware-Aurora-Module-and-Area.md  Bioware-Aurora-Spatial-and-Interactive.md  Container-Formats.md  GFF-File-Format.md  GFF-Items-and-Economy.md  Home.md  NSS-File-Format.md  Resource-Formats-and-Resolution.md
src/toolset/uic/qtpy/dialogs/: about.py  add_door_hook.py  add_room.py  all_tips.py  async_loader.py  batch_processor.py  better_message_box.py  blender_choice.py  clone_module.py  door_hook_properties.py  edit_animation.py  edit_model.py  edit_trigger.py  edit_vector3.py  editor_help.py  env_variable.py  (+39 more)
src/toolset/utils/: __init__.py  mdl_aabb_patch_text.py  mdl_io_aabb_patch_standalone.py  misc.py  pykotor_mdl_aabb_hotfix.py  qt_exceptions.py  qt_helpers.py  script.py  script_compiler.py  script_decompiler.py  script_utils.py  window.py  window_editor.py
src/ui/: convertui.py
src/ui/dialogs/: about.ui
src/ui/widgets/settings/: installations_ui.py
tests/: conftest.py  test_editor_find_references.py  test_filesystem_view.py  test_htinstallation.py  test_optional_imports.py  test_reference_finder.py  test_reference_finder_comprehensive.py  test_reference_search_ui.py  test_ui_clone.py  test_ui_dialogs_extra.py  test_ui_main.py  test_ui_search.py  test_ui_settings.py  test_ui_windows.py
tests/blender/: test_blender_integration.py  test_blender_runtime_bridge.py
tests/data/: debug_module_lookup.py  find_kit_modules.py
tests/gui/: test_editor_help.py  test_sort_qt.py
tests/gui/editors/: test_2da_editor.py  test_are_editor.py  test_bwm_editor.py  test_dlg_editor.py  test_erf_editor.py  test_gff_editor.py  test_git_editor.py  test_ifo_editor.py  test_jrl_editor.py  test_lip_editor.py  test_ltr_editor.py  test_mdl_editor.py  test_nss_editor.py  test_pth_editor.py  test_save_editor.py  test_ssf_editor.py  test_tlk_editor.py  test_tpc_editor.py  test_txt_editor.py  test_utc_editor.py  test_utd_editor.py  test_ute_editor.py  test_uti_editor.py  test_utm_editor.py  test_utp_editor.py  test_uts_editor.py  test_utt_editor.py  test_utw_editor.py  test_wav_editor.py
tests/gui/widgets/: test_robust_tableview_selection.py
tests/gui/windows/: conftest.py  test_designer_controls.py  test_indoor_builder.py  test_indoor_builder_roundtrip.py  test_main_window.py  test_module_designer.py  test_qt_close_signal_signatures.py
(+88 files in other folders)
